@@ -8,6 +8,15 @@ SELECT IF(TRUE, 1, 2) FROM dest1;
 SELECT IF(TRUE, 1, 2) FROM dest1;
 
 EXPLAIN
-SELECT IF(TRUE, 1, 2), IF(FALSE, 1, 2), IF(NULL, 1, 2), IF(TRUE, "a", "b"), IF(TRUE, 0.1, 0.2), IF(FALSE, CAST(1 AS BIGINT), 2), IF(FALSE, CAST(127 AS TINYINT), 128), IF(FALSE, CAST(127 AS TINYINT), CAST(128 AS SMALLINT))  FROM dest1;
+SELECT IF(TRUE, 1, 2), IF(FALSE, 1, 2), IF(NULL, 1, 2), IF(TRUE, "a", "b"),
+       IF(TRUE, 0.1, 0.2), IF(FALSE, CAST(1 AS BIGINT), 2),
+       IF(FALSE, CAST(127 AS TINYINT), 128), IF(FALSE, CAST(127 AS TINYINT),
+       CAST(128 AS SMALLINT)), CAST(128 AS INT), CAST(1.0 AS DOUBLE),
+       CAST('128' AS STRING) FROM dest1;
 
-SELECT IF(TRUE, 1, 2), IF(FALSE, 1, 2), IF(NULL, 1, 2), IF(TRUE, "a", "b"), IF(TRUE, 0.1, 0.2), IF(FALSE, CAST(1 AS BIGINT), 2), IF(FALSE, CAST(127 AS TINYINT), 128), IF(FALSE, CAST(127 AS TINYINT), CAST(128 AS SMALLINT))  FROM dest1;
+SELECT IF(TRUE, 1, 2), IF(FALSE, 1, 2), IF(NULL, 1, 2), IF(TRUE, "a", "b"),
+       IF(TRUE, 0.1, 0.2), IF(FALSE, CAST(1 AS BIGINT), 2),
+       IF(FALSE, CAST(127 AS TINYINT), 128), IF(FALSE, CAST(127 AS TINYINT),
+       CAST(128 AS SMALLINT)), CAST(128 AS INT), CAST(1.0 AS DOUBLE),
+       CAST('128' AS STRING) FROM dest1;
+
