@@ -143,7 +143,10 @@ Trunk - Unreleased
     HIVE-498. Fix null pointer exception in UDFRegExp when
     the expression string is empty. (Zheng Shao via athusoo)
 
-    HIVE-410: Heartbeating for streaming jobs should not depend on stdout
+    HIVE-410: Heartbeating for streaming jobs should not depend on stdout.
+    (Ashish Thusoo via njain)
+
+    HIVE-499. Fix for CAST operator on the same type. (Zheng Shao via athusoo)
 
 Release 0.3.1 - Unreleased
 
